LIB-5: add student lookup page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,7 @@
       const result = await fetchData(id);
       document.getElementById('output').textContent = JSON.stringify(result, null, 2);
     });
+    //JIRA TEST
   </script>
 </body>
 </html>
